--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
 
 	<title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='favicon.png'>
-	<link rel='stylesheet' href='global.css'>
-	<link rel='stylesheet' href='bundle.css'>
+	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
+	<link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
