--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+  <meta charset='utf8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Svelte app</title>
+  <title>Svelte app</title>
 
-	<link rel="icon" href="data:;base64,iVBORw0KGgo=">
-	<link rel='stylesheet' href='styles.css'>
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
-	<script src='recipes.js'></script>
-	<script src='bundle.js'></script>
+  <script src='recipes.js'></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script src='bundle.js'></script>
 </body>
 </html>
