--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
   <meta charset='utf8'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Svelte app</title>
+  <title>h|f - recipes</title>
 
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
+  <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js"></script>
   <script src='recipes.js'></script>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <script src='bundle.js'></script>
 </body>
 </html>
