--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
   <title>h|f - recipes</title>
 
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link rel="icon" href="favicon.ico">
   <link rel='stylesheet' href='styles.css'>
 </head>
 
